# n8n-py

./: .gitignore  Makefile  README.md  pyproject.toml
n8n/: __init__.py  blueprints.py  client.py  models.py
scripts/: uv.sh
tests/: test_blueprints.py  test_simple.py
tests/blueprints/: simple.json
