[project]
name = "n8n-py"
version = "0.1.0"
description = "A Python client for the N8N API"
authors = [
    {name = "Owain Lewis", email = "owain@owainlewis.com"},
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ipykernel>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["n8n"] 